--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-16.14MB/s(Youtube:不良林), server: 35.77.93.10, port: 62161, type: vmess, uuid: 2b9a17a4-ec71-4629-8564-05fcf9b6e3a7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: us24058.cloudmatrix.xyz, port: 24058, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us24058.cloudmatrix.xyz}}
-  - {name: 🇺🇸 美国-1012.3KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 乌克兰-2.71MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇯🇵 日本-21.48MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc4.98848.xyz, port: 26995, type: vmess, uuid: 39c8ee80-37eb-4af2-a5aa-fdf294162fcd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /@/YouTube-bai-piao-wang-zhe, ws-headers: {Host: bai-piao-wang-zhe-iplc4.98848.xyz}}
-  - {name: 未知国家-1.35MB/s(Youtube:不良林), server: awsxjp.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: awsxjp.moonfree.top}}
-  - {name: 未知国家-434.7KB/s(Youtube:不良林), server: v4.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v4.ssrsub.com}}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
+  - {name: 🇯🇵 日本-419.5KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
+  - {name: 乌克兰-2.68MB/s(Youtube:不良林), server: 176.103.61.162, port: 444, type: ss, cipher: chacha20-ietf-poly1305, password: IjBemsAg}
+  - {name: 🇫🇷 法国-2.43MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-12.74MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-612.6KB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇰🇷 韩国-6.82MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.04MB/s(Youtube:不良林), server: hk2703.cloudmatrix.xyz, port: 2703, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: hk2703.cloudmatrix.xyz}}
+  - {name: 🇨🇳 中国-3.67MB/s(Youtube:不良林), server: us2406.cloudmatrix.xyz, port: 2406, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us2406.cloudmatrix.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
-      - 乌克兰-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 未知国家-1.35MB/s(Youtube:不良林)
-      - 未知国家-434.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.5KB/s(Youtube:不良林)
+      - 乌克兰-2.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-612.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
-      - 乌克兰-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 未知国家-1.35MB/s(Youtube:不良林)
-      - 未知国家-434.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.5KB/s(Youtube:不良林)
+      - 乌克兰-2.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-612.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
-      - 乌克兰-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 未知国家-1.35MB/s(Youtube:不良林)
-      - 未知国家-434.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.5KB/s(Youtube:不良林)
+      - 乌克兰-2.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-612.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
-      - 乌克兰-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 未知国家-1.35MB/s(Youtube:不良林)
-      - 未知国家-434.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.5KB/s(Youtube:不良林)
+      - 乌克兰-2.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-612.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
-      - 乌克兰-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 未知国家-1.35MB/s(Youtube:不良林)
-      - 未知国家-434.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.5KB/s(Youtube:不良林)
+      - 乌克兰-2.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-612.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
-      - 乌克兰-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 未知国家-1.35MB/s(Youtube:不良林)
-      - 未知国家-434.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.5KB/s(Youtube:不良林)
+      - 乌克兰-2.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-612.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-16.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.3KB/s(Youtube:不良林)
-      - 乌克兰-2.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 未知国家-1.35MB/s(Youtube:不良林)
-      - 未知国家-434.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.5KB/s(Youtube:不良林)
+      - 乌克兰-2.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-612.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
