--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇯🇵 日本-9.55MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇭🇰 香港-1.70MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.04MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 未知国家-833.1KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-393.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇷🇺 俄罗斯联邦-480.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.55MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.04MB/s(Youtube:不良林)
+      - 未知国家-833.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-393.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-480.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.55MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.04MB/s(Youtube:不良林)
+      - 未知国家-833.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-393.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-480.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.55MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.04MB/s(Youtube:不良林)
+      - 未知国家-833.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-393.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-480.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.70MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.55MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.04MB/s(Youtube:不良林)
+      - 未知国家-833.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-393.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-480.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.55MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.04MB/s(Youtube:不良林)
+      - 未知国家-833.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-393.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-480.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.55MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.04MB/s(Youtube:不良林)
+      - 未知国家-833.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-393.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-480.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-438.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.55MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.04MB/s(Youtube:不良林)
+      - 未知国家-833.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-393.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-480.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
