--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇰🇷 韩国-1.86MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇨🇳 中国-869.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 未知国家-786.9KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇺🇸 美国-786.9KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
   - {name: 🇨🇳 中国-1.84MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26003, type: vmess, uuid: 1c7824b3-1aa0-3e5a-88e8-d3f0426ab21e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.08MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-375.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-869.6KB/s(Youtube:不良林)
-      - 未知国家-786.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-869.6KB/s(Youtube:不良林)
-      - 未知国家-786.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-869.6KB/s(Youtube:不良林)
-      - 未知国家-786.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-869.6KB/s(Youtube:不良林)
-      - 未知国家-786.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-869.6KB/s(Youtube:不良林)
-      - 未知国家-786.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-869.6KB/s(Youtube:不良林)
-      - 未知国家-786.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-869.6KB/s(Youtube:不良林)
-      - 未知国家-786.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
